--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,7 +5,7 @@
 }
 
 *{
-  @include prefix(transition, all .3s);
+  @include prefix(transition, all .5s ease);
 }
 body{
   margin: 0;
@@ -16,20 +16,58 @@ body{
   left: 0;
 }
 #p1 {
-  background: #aaa;
+  background-image: url('../img/bg-1.jpg');
+  @include prefix(background-size, cover);
 }
 #p2{
-  background: #bbb;
+  background-image: url('../img/bg-2.jpg');
+  @include prefix(background-size, cover);
   left: 100vw;
 }
 #p3{
-  background: #12f;
+  background-image: url('../img/bg-3.jpg');
+  @include prefix(background-size, cover);
   left: 200vw;
+  .container{
+    .section:first-child{
+    width: 2 / 3 * 100%;
+    height: 60%;
+    }
+
+    .section:nth-child(2){
+      width: 1 / 3 * 100%;
+      height: 60%;
+    }
+    .section{
+      width: 1 / 3 * 100%;
+      height: 40%;
+    }
+  } 
 }
 #p4{
+  background-image: url('../img/bg-4.jpg');
+  @include prefix(background-size, cover);
   left: 300vw;
+  .container{
+    .section:first-child{
+      height: 100%;
+      width: 40%;
+    }
+    .section{
+      width: 30%;
+      height: 50%;
+    }
+  } 
 }
-section{
+#p5{
+  background-image: url('../img/bg-4.jpg');
+  @include prefix(background-size, cover);
+  left: 400vw;
+  .container{
+    position: relative;
+  }
+}
+.home-container>div{
   width: 100vw;
   height: 100vh;
   position: absolute;
@@ -37,11 +75,79 @@ section{
 
 .home-nav {
   position: absolute;
-  bottom: 3vh;
-  left: 50%;
+  bottom: -5px;
+  width: 100%;
+  .home-nav-item{
+    display: inline-block;
+    background: rgba(0,0,0,.3);
+    width: 20%;
+    height: 1em;
+    text-align: center;
+  }
+  .home-nav-item.active{
+    background: rgba(255,255,255,.3);
+  }
 }
 
-.home-nav .home-nav-item{
-  display: inline-block;
-  margin-right: 3em;
+div.container{
+  width: 74vw;
+  height: 74vh;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  z-index: 1;
+  .section{
+    float: left;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
+}
+
+.section-outfloat{
+  position: absolute;
+}
+.section-1-2{
+  left: 13vw + 2 / 3 * 74vw;
+  top: 13vh;
+  width: 1 / 3 * 74vw;
+  height: 3 / 5 * 74vh;
+  background: #ccc;
+}
+.section-1-3{ 
+  left: 13vw;
+  top: 13vh;
+  width: 2 / 5 * 74vw;
+  height: 74vh;
+  background: #ccc;
+}
+.section-5-2{
+  left: 13vw + 2 / 3 * 74vw;
+  top: 13vh + 3 / 5 * 74vh;
+  width: 1 / 3 * 74vw;
+  height: 2 / 5 * 74vh;
+  background: #ccc;
+}
+.section-5-3{
+  left: 13vw + 2 / 5 * 74vw;
+  top: 13vh + 1 / 2 * 74vh;
+  width: 3 / 10 * 74vw;
+  height: 1 / 2 * 74vh;
+  background: #ccc;
+}
+
+.section-1-4{
+  width: 74vw;
+  height: 46vh;
+  @include prefix(transform, translate3d(13vw, 13vw, 0))
+  background: #ddd;
+}
+.section-5-4{
+  width: 37%;
+  height: 60%;
+  background: #ccc;
+  position: absolute;
+  top: 20%;
+  left: 15%;
+
 }
