--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,139 +15,236 @@ body{
   position: absolute;
   left: 0;
 }
-#p1 {
-  background-image: url('../img/bg-1.jpg');
-  @include prefix(background-size, cover);
-}
-#p2{
-  background-image: url('../img/bg-2.jpg');
-  @include prefix(background-size, cover);
-  left: 100vw;
-}
-#p3{
-  background-image: url('../img/bg-3.jpg');
-  @include prefix(background-size, cover);
-  left: 200vw;
-  .container{
-    .section:first-child{
-    width: 2 / 3 * 100%;
-    height: 60%;
-    }
 
-    .section:nth-child(2){
-      width: 1 / 3 * 100%;
-      height: 60%;
-    }
-    .section{
-      width: 1 / 3 * 100%;
-      height: 40%;
-    }
-  } 
-}
-#p4{
-  background-image: url('../img/bg-4.jpg');
-  @include prefix(background-size, cover);
-  left: 300vw;
-  .container{
-    .section:first-child{
-      height: 100%;
-      width: 40%;
-    }
-    .section{
-      width: 30%;
-      height: 50%;
-    }
-  } 
-}
-#p5{
-  background-image: url('../img/bg-4.jpg');
-  @include prefix(background-size, cover);
-  left: 400vw;
-  .container{
-    position: relative;
-  }
-}
 .home-container>div{
   width: 100vw;
   height: 100vh;
   position: absolute;
 }
 
-.home-nav {
-  position: absolute;
-  bottom: -5px;
-  width: 100%;
-  .home-nav-item{
-    display: inline-block;
-    background: rgba(0,0,0,.3);
-    width: 20%;
-    height: 1em;
-    text-align: center;
+.hidden{
+  display: none;
+}
+////////////////////////////////////////////
+@media screen and (min-width: 790px){
+  #p1 {
+    // background-image: url('../img/bg-1.jpg');
+    @include prefix(background-size, cover);
   }
-  .home-nav-item.active{
-    background: rgba(255,255,255,.3);
+  #p2{
+    // background-image: url('../img/bg-2.jpg');
+    @include prefix(background-size, cover);
+    left: 100vw;
+  }
+  #p3{
+    // background-image: url('../img/bg-3.jpg');
+    @include prefix(background-size, cover);
+    left: 200vw;
+    .container{
+      .section:first-child{
+      width: 2 / 3 * 100%;
+      height: 60%;
+      }
+
+      .section:nth-child(2){
+        width: 1 / 3 * 100%;
+        height: 60%;
+      }
+      .section{
+        width: 1 / 3 * 100%;
+        height: 40%;
+        background: rgba(255,255,255,.4)
+      }
+    } 
+  }
+  #p4{
+    // background-image: url('../img/bg-4.jpg');
+    @include prefix(background-size, cover);
+    left: 300vw;
+    .container{
+      .section:first-child{
+        height: 100%;
+        width: 40%;
+      }
+      .section{
+        width: 30%;
+        height: 50%;
+      }
+    } 
+  }
+  #p5{
+    @keyframes p5{
+      from{
+        margin-left: -100%;
+        opacity: 0;
+      }
+      to{
+        opacity: 1;
+      }
+    }
+    // background-image: url('../img/bg-4.jpg');
+    @include prefix(background-size, cover);
+    left: 400vw;
+    .container{
+
+      .p5{
+        @include prefix(animation, p5 1s);
+      }
+      .text{
+        padding: 1.5em;
+        position: absolute;
+        width: 40%;
+        left: 50%;
+        top: 25%;
+      }      
+      position: relative;
+    }
+  }
+
+  .container .section, .section-outfloat{
+    .orgInfo{
+      padding: 1em;
+      width: 100%;
+      height: 100%;
+      background: #abc;
+      box-sizing: border-box;
+      border: 1px solid #ddd;
+    }
+    .orgInfo:not(.active):hover{
+      @include prefix(transform, scale(0.95, 0.95));
+    }
+    .orgInfo:active{
+      @include prefix(transform, scale(0.85, 0.85))
+    }
+  }
+// nav
+////////////////////////////////////////////
+  .home-nav {
+    position: absolute;
+    bottom: -5px;
+    width: 100%;
+    .home-nav-item{
+      display: inline-block;
+      background: rgba(0,0,0,.3);
+      width: 20%;
+      height: 1em;
+      text-align: center;
+    }
+    .home-nav-item.active{
+      background: rgba(255,255,255,.3);
+    }
+  }
+
+  div.container{
+    width: 74vw;
+    height: 74vh;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate3d(-50%, -50%, 0);
+    z-index: 1;
+    .section{
+      float: left;
+      box-sizing: border-box;
+    }
+  }
+//outfloat
+////////////////////////////////////////////
+  .section-outfloat{
+    position: absolute;
+    z-index: 2;
+  }
+  .section-1-2{
+    left: 13vw + 2 / 3 * 74vw;
+    top: 13vh;
+    width: 1 / 3 * 74vw;
+    height: 3 / 5 * 74vh;
+  }
+  .section-5-2{
+    left: 13vw + 2 / 3 * 74vw;
+    top: 13vh + 3 / 5 * 74vh;
+    width: 1 / 3 * 74vw;
+    height: 2 / 5 * 74vh;
+  }
+  .section-1-3{ 
+    left: 13vw;
+    top: 13vh;
+    width: 2 / 5 * 74vw;
+    height: 74vh;
+    background: #ccc;
+  }
+  .section-5-3{
+    left: 13vw + 2 / 5 * 74vw;
+    top: 13vh + 1 / 2 * 74vh;
+    width: 3 / 10 * 74vw;
+    height: 1 / 2 * 74vh;
+    background: #ccc;
+  }
+
+  .section-1-4{
+    width: 4vw;
+    height: 40vh;
+    margin: 30vh 0 0 13vw;
+    background: #ddd;
+  }
+  .section-5-4{
+        width: 29vw;
+    height: 50vh;
+    background: #ccc;
+    margin: 25vh 0 0 15vw;
+
   }
 }
 
-div.container{
-  width: 74vw;
-  height: 74vh;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate3d(-50%, -50%, 0);
-  z-index: 1;
-  .section{
-    float: left;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
+
+////////////////////////////////////////////
+@media screen and (max-width: 790px){
+  #p1 {
+    // background-image: url('../img/bg-1.jpg');
+    @include prefix(background-size, cover);
   }
-}
-
-.section-outfloat{
-  position: absolute;
-}
-.section-1-2{
-  left: 13vw + 2 / 3 * 74vw;
-  top: 13vh;
-  width: 1 / 3 * 74vw;
-  height: 3 / 5 * 74vh;
-  background: #ccc;
-}
-.section-1-3{ 
-  left: 13vw;
-  top: 13vh;
-  width: 2 / 5 * 74vw;
-  height: 74vh;
-  background: #ccc;
-}
-.section-5-2{
-  left: 13vw + 2 / 3 * 74vw;
-  top: 13vh + 3 / 5 * 74vh;
-  width: 1 / 3 * 74vw;
-  height: 2 / 5 * 74vh;
-  background: #ccc;
-}
-.section-5-3{
-  left: 13vw + 2 / 5 * 74vw;
-  top: 13vh + 1 / 2 * 74vh;
-  width: 3 / 10 * 74vw;
-  height: 1 / 2 * 74vh;
-  background: #ccc;
-}
-
-.section-1-4{
-  width: 74vw;
-  height: 46vh;
-  @include prefix(transform, translate3d(13vw, 13vw, 0))
-  background: #ddd;
-}
-.section-5-4{
-  width: 37%;
-  height: 60%;
-  background: #ccc;
-  position: absolute;
-  top: 20%;
-  left: 15%;
-
+  #p2{
+    // background-image: url('../img/bg-2.jpg');
+    @include prefix(background-size, cover);
+    left: 100vw;
+  }
+  #p3{
+    // background-image: url('../img/bg-3.jpg');
+    @include prefix(background-size, cover);
+    left: 200vw;
+    .container{
+      width: 80vw; 
+      height: 85vh; 
+      margin: (100vh-85vh)/2 auto; 
+      .section{
+        width: 100%;
+        height: 20vw;
+        background: #abc;
+        border: 1px solid #ddd;
+      }
+    } 
+  }
+  #p4{
+    // background-image: url('../img/bg-4.jpg');
+    @include prefix(background-size, cover);
+    left: 300vw;
+    .container{
+      .section:first-child{
+        height: 100%;
+        width: 40%;
+      }
+      .section{
+        width: 30%;
+        height: 50%;
+      }
+    } 
+  }
+  #p5{
+    // background-image: url('../img/bg-4.jpg');
+    @include prefix(background-size, cover);
+    left: 400vw;
+    .container{
+      position: relative;
+    }
+  }
 }
