--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,6 +11,9 @@ body{
   margin: 0;
   overflow: hidden;
 }
+.clear{
+  clear: both;
+}
 .home-container{
   position: absolute;
   left: 0;
@@ -23,92 +26,51 @@ body{
 }
 
 .hidden{
-  display: none;
+  opacity: 0;
+  // display: none;
 }
+a{
+  text-decoration: none;
+}
+@import 'page1';
+@import 'page2';
+@import 'page3';
+@import 'page4';
+@import 'page5';
+
+#p1 {
+  // background-image: url('../img/bg-1.jpg');
+  @include prefix(background-size, cover);
+}
+#p2{
+  // background-image: url('../img/bg-2.jpg');
+  @include prefix(background-size, cover);
+  left: 100vw;
+}
+#p3{
+  // background-image: url('../img/bg-3.jpg');
+  @include prefix(background-size, cover);
+  left: 200vw;
+}
+#p4{
+  // background-image: url('../img/bg-4.jpg');
+  @include prefix(background-size, cover);
+  left: 300vw;
+}
+#p5{
+  left: 400vw;
+}
+
 ////////////////////////////////////////////
 @media screen and (min-width: 790px){
-  #p1 {
-    // background-image: url('../img/bg-1.jpg');
-    @include prefix(background-size, cover);
-  }
-  #p2{
-    // background-image: url('../img/bg-2.jpg');
-    @include prefix(background-size, cover);
-    left: 100vw;
-  }
-  #p3{
-    // background-image: url('../img/bg-3.jpg');
-    @include prefix(background-size, cover);
-    left: 200vw;
-    .container{
-      .section:first-child{
-      width: 2 / 3 * 100%;
-      height: 60%;
-      }
-
-      .section:nth-child(2){
-        width: 1 / 3 * 100%;
-        height: 60%;
-      }
-      .section{
-        width: 1 / 3 * 100%;
-        height: 40%;
-        background: rgba(255,255,255,.4)
-      }
-    } 
-  }
-  #p4{
-    // background-image: url('../img/bg-4.jpg');
-    @include prefix(background-size, cover);
-    left: 300vw;
-    .container{
-      .section:first-child{
-        height: 100%;
-        width: 40%;
-      }
-      .section{
-        width: 30%;
-        height: 50%;
-      }
-    } 
-  }
-  #p5{
-    @keyframes p5{
-      from{
-        margin-left: -100%;
-        opacity: 0;
-      }
-      to{
-        opacity: 1;
-      }
-    }
-    // background-image: url('../img/bg-4.jpg');
-    @include prefix(background-size, cover);
-    left: 400vw;
-    .container{
-
-      .p5{
-        @include prefix(animation, p5 1s);
-      }
-      .text{
-        padding: 1.5em;
-        position: absolute;
-        width: 40%;
-        left: 50%;
-        top: 25%;
-      }      
-      position: relative;
-    }
-  }
-
   .container .section, .section-outfloat{
     .orgInfo{
       padding: 1em;
       width: 100%;
       height: 100%;
-      background: #abc;
       box-sizing: border-box;
       border: 1px solid #ddd;
+      @include prefix(transform-delay, .5s)
     }
     .orgInfo:not(.active):hover{
       @include prefix(transform, scale(0.95, 0.95));
@@ -116,9 +78,31 @@ body{
     .orgInfo:active{
       @include prefix(transform, scale(0.85, 0.85))
     }
+
+    @keyframes active{
+      0%{
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+      100%{
+        width: 74vw;
+        height: 74vh;
+      }
+    }
+    .orgInfo.active{      
+      @include prefix(animation, active 1s ease-out);
+      width: 74vw;
+      height: 74vh;
+      background: #abc;
+      z-index: 2;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
   }
-// nav
-////////////////////////////////////////////
+  // nav
+  ////////////////////////////////////////////
   .home-nav {
     position: absolute;
     bottom: -5px;
@@ -148,103 +132,13 @@ body{
       box-sizing: border-box;
     }
   }
-//outfloat
-////////////////////////////////////////////
+  //outfloat
+  ////////////////////////////////////////////
   .section-outfloat{
     position: absolute;
-    z-index: 2;
-  }
-  .section-1-2{
-    left: 13vw + 2 / 3 * 74vw;
-    top: 13vh;
-    width: 1 / 3 * 74vw;
-    height: 3 / 5 * 74vh;
-  }
-  .section-5-2{
-    left: 13vw + 2 / 3 * 74vw;
-    top: 13vh + 3 / 5 * 74vh;
-    width: 1 / 3 * 74vw;
-    height: 2 / 5 * 74vh;
-  }
-  .section-1-3{ 
-    left: 13vw;
-    top: 13vh;
-    width: 2 / 5 * 74vw;
-    height: 74vh;
-    background: #ccc;
-  }
-  .section-5-3{
-    left: 13vw + 2 / 5 * 74vw;
-    top: 13vh + 1 / 2 * 74vh;
-    width: 3 / 10 * 74vw;
-    height: 1 / 2 * 74vh;
-    background: #ccc;
-  }
-
-  .section-1-4{
-    width: 4vw;
-    height: 40vh;
-    margin: 30vh 0 0 13vw;
-    background: #ddd;
-  }
-  .section-5-4{
-        width: 29vw;
-    height: 50vh;
-    background: #ccc;
-    margin: 25vh 0 0 15vw;
-
-  }
-}
-
-
-////////////////////////////////////////////
-@media screen and (max-width: 790px){
-  #p1 {
-    // background-image: url('../img/bg-1.jpg');
-    @include prefix(background-size, cover);
-  }
-  #p2{
-    // background-image: url('../img/bg-2.jpg');
-    @include prefix(background-size, cover);
-    left: 100vw;
-  }
-  #p3{
-    // background-image: url('../img/bg-3.jpg');
-    @include prefix(background-size, cover);
-    left: 200vw;
-    .container{
-      width: 80vw; 
-      height: 85vh; 
-      margin: (100vh-85vh)/2 auto; 
-      .section{
-        width: 100%;
-        height: 20vw;
-        background: #abc;
-        border: 1px solid #ddd;
-      }
-    } 
-  }
-  #p4{
-    // background-image: url('../img/bg-4.jpg');
-    @include prefix(background-size, cover);
-    left: 300vw;
-    .container{
-      .section:first-child{
-        height: 100%;
-        width: 40%;
-      }
-      .section{
-        width: 30%;
-        height: 50%;
-      }
-    } 
-  }
-  #p5{
-    // background-image: url('../img/bg-4.jpg');
-    @include prefix(background-size, cover);
-    left: 400vw;
-    .container{
-      position: relative;
+    div{
+      z-index: 2;
     }
-  }
+    
+  }  
 }
