--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -63,7 +63,7 @@ a{
 
 ////////////////////////////////////////////
 @media screen and (min-width: 790px){
-  .container .section, .section-outfloat{
+  .section-outfloat .section{
     .orgInfo{
       padding: 1em;
       width: 100%;
@@ -77,28 +77,6 @@ a{
     }
     .orgInfo:active{
       @include prefix(transform, scale(0.85, 0.85))
-    }
-
-    @keyframes active{
-      0%{
-        position: absolute;
-        top: 0;
-        left: 0;
-      }
-      100%{
-        width: 74vw;
-        height: 74vh;
-      }
-    }
-    .orgInfo.active{      
-      @include prefix(animation, active 1s ease-out);
-      width: 74vw;
-      height: 74vh;
-      background: #abc;
-      z-index: 2;
-      position: absolute;
-      top: 0;
-      left: 0;
     }
   }
   // nav
@@ -119,26 +97,37 @@ a{
     }
   }
 
-  div.container{
-    width: 74vw;
-    height: 74vh;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate3d(-50%, -50%, 0);
-    z-index: 1;
-    .section{
-      float: left;
-      box-sizing: border-box;
-    }
+  .section{
+    float: left;
+    box-sizing: border-box;
   }
   //outfloat
   ////////////////////////////////////////////
   .section-outfloat{
     position: absolute;
     div{
+      box-sizing: border-box;
+    } 
+    .orgInfo.active{
       z-index: 2;
+      position: absolute;
+      top: 0;
+      left: 0;
     }
-    
+    .section{
+      .orgDetail.active{
+        @include prefix(animation, textanime 1s ease )
+        visibility: visible;
+        opacity: 1;
+      }
+      .orgDetail{
+        position: absolute;
+        line-height: 2.2;
+        text-align: justify;
+        visibility: hidden;
+        opacity: 0;
+        z-index: -1;
+      }
+    }
   }  
 }
