--- a/src/sass/page3.scss
+++ b/src/sass/page3.scss
@@ -5,52 +5,146 @@
 }
 @media screen and (min-width: 790px){
   #p3{
-    .container{
-      overflow: hidden;
-      .section:first-child{
-      width: 2 / 3 * 100%;
-      height: 60%;
-      }
-
-      .section:nth-child(2){
-        width: 1 / 3 * 100%;
-        height: 60%;
-      }
-      .section{
-        width: 1 / 3 * 100%;
-        height: 40%;
-        .orgInfo{
+    div:not(.turnBtn){
+      display: none;
+    }
+    .turnBtn {
+      width: 8vh;
+      height: 8vh;
+      background: rgba(0, 0, 0, 0.3);
+      position: absolute;
+      left: 50vw;
+      top: 50vh;
+      border-radius: 50%;
+      transform: translate3d(-50%,-50%,0);
+    }
+    .turnBtn:hover:before{
+      @keyframes btn{
+        from{
+          @include prefix(transform, scale(1,1))
+        }
+        to{
+          @include prefix(transform, scale(2,2))
+          opacity: 0;
         }
       }
-    } 
+
+      @include prefix(animation, btn 1s ) 
+      content: ' ';
+      background: #b3a2a0;
+      display: block;
+      width: 8vh;
+      height: 8vh;
+      border-radius: 50%;
+
+    }
   }
-  
-  .section-1-2{
-    left: 13vw + 2 / 3 * 74vw;
-    top: 13vh;
-    width: 1 / 3 * 74vw;
-    height: 3 / 5 * 74vh;
+  .section-1-2:not(.active), .section-5-2:not(.active){
+    width: 0;
+    overflow: hidden;
+    div{display: none;}
   }
-  .section-5-2{
-    left: 13vw + 2 / 3 * 74vw;
-    top: 13vh + 3 / 5 * 74vh;
-    width: 1 / 3 * 74vw;
-    height: 2 / 5 * 74vh;
+  .section-1-2.active{
+    display: block;
+    width: 50vw;
+    height: 100vh;
+    background-image: url('../img/bg-2.jpg');
+    @include prefix(background-size, cover);
+    @include prefix(background-position, 100% 0);
+    .section:first-child{
+    width: 50%;
+    height: 100%;
+    }
+    .section:nth-child(2){
+      width: 50%;
+      height: 50%;
+    }
+    .section:nth-child(3){
+      width: 50%;
+      height: 50%;
+    }
+    .orgDetail{
+      left: 50vw;
+    }
+    .orgInfo.active{
+      @include prefix(background-position, 100% 0);
+    }
+  }
+  .section-5-2.active{
+    width: 50vw;
+    height: 100vh;
+    right: 0;
+    background-image: url('../img/bg-2.jpg');
+    @include prefix(background-size, cover);
+    @include prefix(background-position, 0% 0);
+    .section:first-child{
+    width: 100%;
+    height: 50%;
+    }
+    .section:nth-child(2){
+      width: 50%;
+      height: 50%;
+    }
+    .section:nth-child(3){
+      width: 50%;
+      height: 50%;
+    }
+    .orgDetail{
+      left: -50vw;
+    }
+    .orgInfo.active{
+      @include prefix(background-position, 0% 0);
+    }
+  }
+
+  .section-1-2, .section-5-2{
+    .section{
+      .orgInfo{        
+        color: #fff;
+      }
+      .orgInfo.active{
+        background-image: url('../img/bg-2.jpg');
+        @include prefix(background-size, cover);
+        @keyframes active{
+          0%{
+            position: absolute;
+            top: 0;
+            left: 0;
+          }
+          100%{
+            width: 50vw;
+            height: 100vh;
+          }
+        }
+
+      }       
+      .orgDetail.active{
+        @include prefix(animation, textanime 1s ease )
+        visibility: visible;
+        opacity: 1;
+      }
+      .orgDetail{
+        width: 50vw;
+        height: 100vh;
+        top: 0;
+        padding: 10vw;
+      }
+    }
   }
 }
 
 
 @media screen and (max-width: 790px){
   #p3{
-    .container{
-      width: 80vw; 
-      height: 85vh; 
-      margin: (100vh-85vh)/2 auto; 
-      .section{
-        width: 100%;
-        height: 20vw;
-        border: 1px solid #ddd;
-      }
-    } 
+    // .container{
+    //   width: 80vw; 
+    //   height: 85vh; 
+    //   margin: (100vh-85vh)/2 auto; 
+    //   .section{
+    //     width: 100%;
+    //     height: 20vw;
+    //     border: 1px solid #ddd;
+    //   }
+    // } 
   }
 }
