--- a/src/sass/page4.scss
+++ b/src/sass/page4.scss
@@ -6,44 +6,59 @@
 @media screen and (min-width: 790px){
   #p4{
     .container{
+      display: none;
       .section:first-child{
         height: 100%;
         width: 40%;
-      }
-      .section{
-        width: 30%;
-        height: 50%;
       }
     } 
   }
   
   .section-1-3{ 
-    left: 13vw;
-    top: 13vh;
-    width: 2 / 5 * 74vw;
-    height: 74vh;
-    background: #ccc;
+    left: 25vh;
+    top: 10vh;
+    width: 80vh;
+    height: 80vh;
+    .section{
+      width: 50%;
+      height: 50%;
+      color: #000;
+      .orgInfo.active{
+        color: #fff;
+      }
+    }
+    .orgDetail{
+      width: 50vw;
+      height: 100vh;
+      top: 0;
+      left: 80vh;
+      padding: 20vh;
+    }
   }
   .section-5-3{
-    left: 13vw + 2 / 5 * 74vw;
-    top: 13vh + 1 / 2 * 74vh;
-    width: 3 / 10 * 74vw;
-    height: 1 / 2 * 74vh;
-    background: #ccc;
+    left: 105vh;
+    top: 10vh;
+    width: 80vh;
+    height: 80vh;    
+    background-image: url('../img/bg-2.jpg');
+    @include prefix(background-size, cover);
+  }
+  .section-5-3.active{
+    left: 25vh;
   }
 }
 
 @media screen and (max-width: 790px){
   #p4{
     .container{
-      .section:first-child{
-        height: 100%;
-        width: 40%;
-      }
-      .section{
-        width: 30%;
-        height: 50%;
-      }
+      // .section:first-child{
+      //   height: 100%;
+      //   width: 40%;
+      // }
+      // .section{
+      //   width: 30%;
+      //   height: 50%;
+      // }
     } 
   }
 }
