--- a/src/sass/page1.scss
+++ b/src/sass/page1.scss
@@ -7,13 +7,14 @@
   #p1{
     ul li{
       float: right;
-      list-style: none;
     }
     nav{
       height: 12vh;
-      width: 92vw;
+      width: 50vw;
       box-sizing: border-box;
       padding: 1vw 0 0 1vw;
+      margin-right: 8vw;
+      float: right;
       h1{
         margin: 0;
         float: left;
@@ -21,8 +22,9 @@
       }
       ul li{
         margin-left: 2vw;
-      }
-      .nav-container{
+        a{
+          color: #000;
+        }
       }
     }
     .jumbotron{
@@ -57,12 +59,6 @@
     }
     .home-bottom{
       width: 92vw;
-      ul{
-        float: right;
-        li{
-          margin-left: 1vw;
-        }
-      }
     }
   }
 
@@ -73,7 +69,91 @@
 
 @media screen and (max-width: 790px){
   #p1{
-    background-image: url('../img/bg-1.jpg');
-    @include prefix(background-size, cover);
+    nav{
+      .btn, .btn:before, .btn:after{
+        top: 3vh;
+        right: 3vw;
+        content: '';
+        width: 5vh;
+        height: 3px;
+        background: #000;
+        margin: 0;
+        padding: 0;
+        position: absolute;
+        z-index: 1;
+      }
+      .btn:before, .btn:after{
+        right: 0;
+        z-index: 1;
+      }
+      .btn:before{
+        top: 6px;
+      }
+      .btn:after{
+        top: 12px;
+      }
+      .btn.active{         
+        @include prefix(transform, rotate(-45deg));
+        top: 4vh;
+        background-color: #fff;
+      }
+      .btn.active:after{
+        @include prefix(transform, rotate(90deg));
+        top: 0;
+        background-color: #fff;
+      }
+      .btn.active:before{
+        display: none;
+      }
+      .nav, .home-bottom{
+        width: 100vw;
+        height: 0;
+        margin: 0;
+        font-size: 2.5vh;
+        font-weight: bold;
+        box-sizing: border-box;
+        position: relative;
+        padding-top: 10vh;
+        overflow: hidden;
+        ul{
+          margin: 0;
+          font-size: 2.5vh;
+          font-weight: bold;
+          box-sizing: border-box;
+          line-height: 3;
+          li{
+            float: left;
+            margin-right: 5vw;
+            a{color: #fff;}
+          }
+        }
+      }
+      .nav.active{
+        background: #debaa5;
+        height: 20vh;
+      }
+    }
+    .nav-container{
+      height: 50vh;
+      background-image: url('../img/bg-1.jpg');
+      @include prefix(background-size, cover);
+      @include prefix(background-position, 0% 0);
+      padding-top: 1vh;
+      padding-left: 2vh;
+      h1{
+        margin-top: -10vh;
+      }
+    }
+    .jumbotron{
+      .jumbotron-title{
+        p{
+          text-align: left;
+          font-size: 3vh;
+          padding: 2vh;
+        }
+      }
+    }
+    .home-right{display: none;}
+    .home-bottom{margin-left: 2vh;}
   }
 }
