--- a/src/sass/page3.scss
+++ b/src/sass/page3.scss
@@ -67,7 +67,11 @@
       left: 50vw;
     }
     .orgInfo.active{
-      @include prefix(background-position, 100% 0);
+      @include prefix(background-position, 100% 0);       
+      text-align: right;
+      h1,span{
+        margin-right: -1vw;
+      }
     }
   }
   .section-5-2.active{
@@ -94,6 +98,9 @@
     }
     .orgInfo.active{
       @include prefix(background-position, 0% 0);
+      h1,span{
+        margin-left: -1vw;
+      }
     }
   }
 
@@ -105,16 +112,12 @@
       .orgInfo.active{
         background-image: url('../img/bg-2.jpg');
         @include prefix(background-size, cover);
-        @keyframes active{
-          0%{
-            position: absolute;
-            top: 0;
-            left: 0;
-          }
-          100%{
-            width: 50vw;
-            height: 100vh;
-          }
+        h1{
+          margin-top: 35vh;
+          font-size: 4vw;
+        }
+        span{
+          font-size: 2vw;
         }
 
       }       
@@ -127,7 +130,7 @@
         width: 50vw;
         height: 100vh;
         top: 0;
-        padding: 10vw;
+        padding: 30vh 10vw;
       }
     }
   }
@@ -136,15 +139,6 @@
 
 @media screen and (max-width: 790px){
   #p3{
-    // .container{
-    //   width: 80vw; 
-    //   height: 85vh; 
-    //   margin: (100vh-85vh)/2 auto; 
-    //   .section{
-    //     width: 100%;
-    //     height: 20vw;
-    //     border: 1px solid #ddd;
-    //   }
-    // } 
+    
   }
 }
