--- a/src/sass/page1.scss
+++ b/src/sass/page1.scss
@@ -26,6 +26,53 @@
           color: #000;
         }
       }
+      .nav{
+        ul#login{
+          li:first-child{
+            width: 3vw;
+            height: 3vw;
+            min-width: 36px;
+            min-height: 36px;
+            overflow: hidden;
+            padding: 0;
+            border-radius: 50%;
+            float: right;
+            img{
+            min-width: 100%;
+            height: 100%;
+            }
+          }
+          li:nth-child(2){
+            padding-top: 1vh; 
+          }
+        }
+        #regist{
+          width: 100vw;
+          height: 0;
+          top: 0;
+          left: 0;
+          position: absolute;
+          background-color: #debaa5;
+          text-align: center;
+          opacity: 0;
+          input, button{
+            width: 70vw;
+            padding: 3vh;
+            border: 1px solid #aab;
+            border-radius: 3px;
+            margin-top: 3vh
+          }
+          button{
+            background-color: transparent;
+            border-color: #fff;
+            color: #fff;
+          }
+        }
+        #regist.active{
+          opacity: 1;
+          height: 100vh;
+        }
+      }
     }
     .jumbotron{
       float: left;
@@ -127,10 +174,75 @@
             a{color: #fff;}
           }
         }
+        ul#login{
+          opacity: 0;
+          li{
+            position: absolute;
+            box-sizing: border-box;
+          }
+          li:first-child{
+            width: 20vh;
+            height: 20vh;
+            overflow: hidden;
+            margin: 0 auto;
+            left: 50%;
+            top: -5vw;
+            border-radius: 50%;
+            transform: translate(-50%,50%);
+            img{
+              min-width: 100%;
+              height: 100%;
+            }
+            z-index: 1;
+          }
+          li:nth-child(2){
+            width: 100vw;
+            height: 20vh;
+            background-color: #fff;
+            top: 20vh;
+            left: 0;
+            padding-top: 10vh; 
+            text-align: center;
+            a{color: #000;}
+          }
+        }
+        #regist{
+          width: 100vw;
+          height: 0;
+          top: 20vh;
+          left: 0;
+          position: absolute;
+          background-color: #debaa5;
+          text-align: center;
+          opacity: 0;
+          input, button{
+            width: 70vw;
+            padding: 3vw;
+            border: 1px solid #aab;
+            border-radius: 3px;
+            margin-top: 3vh
+          }
+          button{
+            background-color: transparent;
+            border-color: #fff;
+            color: #fff;
+          }
+        }
+        #regist.active{
+          opacity: 1;
+          height: 80vh;
+        }
       }
       .nav.active{
         background: #debaa5;
-        height: 20vh;
+        overflow: inherit;
+        height: 20vh;  
+        ul#login{
+          opacity: 1;
+        }
+      }
+      .nav.active.login{      
+        height: 40vh;
       }
     }
     .nav-container{
