--- a/src/sass/page4.scss
+++ b/src/sass/page4.scss
@@ -50,15 +50,74 @@
 
 @media screen and (max-width: 790px){
   #p4{
+      overflow-y: auto;
+    width: 101.5vw;
     .container{
-      // .section:first-child{
-      //   height: 100%;
-      //   width: 40%;
+      .section{
+        .orgInfo{
+          height: 25vh;
+          width: 100vw;
+          background-color: #abc;
+          box-sizing: border-box;
+          padding: 2vh;
+        }
+        .orgInfo.active:before{
+          @keyframes click{
+            from{
+              width: 25vw;
+              height: 25vw;
+            }
+            to{
+              width: 200vh;
+              height: 200vh;
+            }
+          }
+          @include prefix(animation, click .5s ease);
+          display: block;
+          content: ' ';
+          background-color: rgba(0,0,0,.5);
+          position: absolute;
+          top: 0;
+          left: 0;
+          border-radius: 50%;
+          @include prefix(transform-origin, 0% 0%)
+          @include prefix(transform, translate(-50%,-50%))
+          z-index: -1;
+          width: 200vh;
+          height: 200vh;
+        }
+        .orgDetail:not(.active){
+          display: none;
+        }
+        .orgInfo.active{
+          height: 100vh;
+          width: 100vw;
+          position: fixed;
+          left: 0;
+          top: 0;
+          color: #fff;
+          text-align: center;
+          padding-top: 20vh;
+        }
+      }
+
+      // @for $i from 1 to 4 {
+      //   .section:nth-child(#{$i}) .orgInfo {
+      //     background-color: rgba(255,51,12, 0.1);
+      //   }
       // }
-      // .section{
-      //   width: 30%;
-      //   height: 50%;
-      // }
+      .section:nth-child(1) .orgInfo{
+        background-color: #deba90;
+      }
+      .section:nth-child(2) .orgInfo{
+        background-color: #debaa0;
+      }
+      .section:nth-child(3) .orgInfo{
+        background-color: #debac0;
+      }
+      .section:nth-child(4) .orgInfo{
+        background-color: #debae0;
+      }
     } 
   }
 }
