--- a/src/sass/page4.scss
+++ b/src/sass/page4.scss
@@ -40,7 +40,7 @@
   }
   .section-5-3{
     left: 50vw;   
-    background-image: url('../img/bg-2.jpg');
+    background-image: url('../img/bg-4.jpg');
     @include prefix(background-size, cover);
   }
   .section-5-3.active{
@@ -100,23 +100,26 @@
           padding-top: 20vh;
         }
       }
-
-      // @for $i from 1 to 4 {
-      //   .section:nth-child(#{$i}) .orgInfo {
-      //     background-color: rgba(255,51,12, 0.1);
-      //   }
-      // }
       .section:nth-child(1) .orgInfo{
-        background-color: #deba90;
+      background-image: url('../img/p3-1.jpg');
+      @include prefix(background-size, cover);
       }
       .section:nth-child(2) .orgInfo{
-        background-color: #debaa0;
+      background-image: url('../img/p3-1.jpg');
+      @include prefix(background-size, cover);
+      @include prefix(background-position, 0% 36%);
       }
       .section:nth-child(3) .orgInfo{
-        background-color: #debac0;
+        color: #fff;
+      background-image: url('../img/p3-1.jpg');
+      @include prefix(background-size, cover);
+      @include prefix(background-position, 0% 71%);
       }
       .section:nth-child(4) .orgInfo{
-        background-color: #debae0;
+        color: #fff;
+      background-image: url('../img/p3-1.jpg');
+      @include prefix(background-size, cover);
+      @include prefix(background-position, 0% 106%);
       }
     } 
   }
